


## Version 5.5.8

* Support for filtering the results of the [slots.vocabulary] slot.

* Allowing for configuring appsettings.json if the database connection string is not correct during the setup process.

* Minor bugfixes in the frontend.

* Preventing [unwrap] from trying to evaluate values that are not expressions, to allow for easily evaluate hierarchies of
  "mixed values".

* Created a new slot called [reference] in magic.lambda, that will return a node by reference, as its value, to allow for
  passing around nodes by reference to other slots, etc.

* Created support for "transformers" and "injectors", as an addition to "validators". Transformers will somehow change an existing
  node's value upon POST and PUT, while "injectors" will inject a node without changing an existing node's value.


### Updated modules for version 5.5.8

* magic.lambda.slots

* magic.lambda

* magic - The main project (of course)



## Version 5.5.9

* Much better meta data in _"endpoints.get.hl"_ through the [endpoints.list] slot, allowing us to return much more high quality meta
  information to client, with the intention of allowing for automatically generating frontend grids, editors, etc.

* Support for explicitly stating whether or not crudification process should allow for files being overwritten or not.

* Correctly counting number of endpoints during generation process of HTTP REST endpoints.

* Support for zipping files directly unto the HTTP stream.


### Updated modules for version 5.5.9

* magic.endpoint

* magic.lambda.io



## Version 5.7.0

* Entirely new Angular frontend generator, plus minor bugfixings in literally every single plugin.

### Updated modules for version 5.7.0

_Every single module_


## Version 5.7.1

* Better support for default values in MySQL during crudification.

* Better file editor in dashboard, which allows for editing multiple files at the same time.

* Improved UI on endpoints menu in dashboard
